--- a/TCLab Python LIbrary, Step Chance, Fit FO model to step change, Step up, Step down, Find Max temp., Oscillatory experiment.ipynb
+++ b/TCLab Python LIbrary, Step Chance, Fit FO model to step change, Step up, Step down, Find Max temp., Oscillatory experiment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 480 LAB#1 JEREMY RUSSELL HOOK"
+    "#JEREMY RUSSELL HOOK"
    ]
   },
   {
